# lulc_classifier

./: .env  .env.example  ARCHITECTURE.md  BUILD_COMPLETE.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile.frontend  HF_DEPLOYMENT_README.md  MOCK_REMOVAL.md  MODEL_INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  docker-compose.yml  package-lock.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  README.md  class_mappings.py  demo_client.py  model_loader.py  models_arch.py  preprocessing.py  pyproject.toml
backend/models/: eurosat.pth  mlrsnet.pth  patternnet.pth
backend/src/: app.py  explainers.py
components/: DatasetSelector.tsx  ImageUploadZone.tsx  LulcChatbot.tsx  NeuralNetworkLoader.tsx  PredictionResults.tsx  TechnicalSpecs.tsx
lib/: chatService.ts
